test/resources/interpreter/passing/VariableDecl.scala
object VariableDecl {
  val a: Int = 1;
  a + 1
}