test/resources/interpreter/failing/GhostVariable.scala
object GhostVariable {
  val a: Int = 1;
  b + 1
}